@@ -21,7 +21,7 @@ public class DetectionMethodsManagerImpl implements DetectionMethodsManager {
 
     private final List<DataExtractionFork> dataExtractionForks;
 
-    private final Map<String, List<RefactoringCandidate>> candidatesOfProjects = new HashMap<>();
+    private final Map<String, List<RefactoringCandidate>> projectsCandidates = new HashMap<>();
 
     @Override
     public List<RefactoringCandidate> extractCandidates(String projectId) {
@@ -29,14 +29,14 @@ public class DetectionMethodsManagerImpl implements DetectionMethodsManager {
         final Project project = this.projectsRepository.get(FileRepositoryCollections.PROJECTS, projectId)
                 .orElseThrow(IllegalArgumentException::new);
 
-        if (!this.candidatesOfProjects.containsKey(project.getId())) {
-            this.candidatesOfProjects.put(project.getId(), new ArrayList<>());
+        if (!this.projectsCandidates.containsKey(project.getId())) {
+            this.projectsCandidates.put(project.getId(), new ArrayList<>());
         }
-        this.candidatesOfProjects.get(project.getId()).clear();
-        this.candidatesOfProjects.get(project.getId()).addAll(this.dataExtractionForks.stream()
+        this.projectsCandidates.get(project.getId()).clear();
+        this.projectsCandidates.get(project.getId()).addAll(this.dataExtractionForks.stream()
                 .flatMap(f -> f.findCandidates(project).stream()).toList());
 
-        return this.candidatesOfProjects.get(project.getId());
+        return this.projectsCandidates.get(project.getId());
     }
 
     @Override
@@ -45,36 +45,34 @@ public class DetectionMethodsManagerImpl implements DetectionMethodsManager {
         Project project = this.projectsRepository.get(FileRepositoryCollections.PROJECTS, projectId)
                 .orElseThrow(IllegalArgumentException::new);
 
-        Optional.ofNullable(this.candidatesOfProjects.get(projectId)).orElseThrow(IllegalStateException::new);
+        Optional.ofNullable(this.projectsCandidates.get(projectId)).orElseThrow(IllegalStateException::new);
 
         for (RefactoringCandidate candidate : eligiblePatterns.stream()
                 .filter(dto -> this.isCandidateProcessed(projectId, dto))
-                .map(dto -> this.parseCandidateDTO(projectId, dto).get()).collect(Collectors.toList())) {
+                .map(dto -> this.parseCandidateDTO(projectId, dto).get()).toList()) {
 
             final Optional<DataExtractionFork> fork = this.dataExtractionForks.stream()
                     .filter(f -> f.belongsTo(candidate.getReference())).findFirst();
 
-            if (fork.isPresent()) {
-                final String refactoredProjectId = fork.get().refactor(project, candidate);
+            fork.ifPresent(dataExtractionFork -> dataExtractionFork.refactor(project, candidate));
 
-                return this.projectsRepository
-                        .get(FileRepositoryCollections.REFACTORED_PROJECTS, refactoredProjectId)
-                        .orElseThrow(IllegalArgumentException::new).getId();
-            }
+            return this.projectsRepository
+                    .get(FileRepositoryCollections.REFACTORED_PROJECTS, projectId)
+                    .orElseThrow(IllegalArgumentException::new).getId();
         }
 
         throw new IllegalArgumentException();
     }
 
     private boolean isCandidateProcessed(String projectId, RefactoringCandidadeDTO rc) {
-        final boolean processed = this.candidatesOfProjects.get(projectId).stream()
+        final boolean processed = this.projectsCandidates.get(projectId).stream()
                 .anyMatch(c -> c.getId().equals(rc.getId()));
 
         return processed;
     }
 
     private Optional<RefactoringCandidate> parseCandidateDTO(String projectId, RefactoringCandidadeDTO dto) {
-        final Optional<RefactoringCandidate> candidate = this.candidatesOfProjects.get(projectId).stream()
+        final Optional<RefactoringCandidate> candidate = this.projectsCandidates.get(projectId).stream()
                 .filter(rc -> dto.getId().equals(rc.getId())).findFirst();
 
         return candidate;
